@@ -10,6 +10,6 @@
 
 const char *ConquestId = "$Id$";
 const char *ConquestVersion = "Version 8.0.1p";
-const char *ConquestDate = "11/21/2004";
+const char *ConquestDate = "11/24/2004";
 
 /* That's it! */
